--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
+      <p>I am a cinematographer and editor who wants to learn software development.</p>
+      <h1>I am from New York City.</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Chess, swimming and traveling.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Running a multimedia company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Westchester, NY</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To add a new dimension to my portfolio.</p>
     </section>
 
     <footer id="footer">
