updating personal informatio

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am a cinematographer and editor who wants to learn software development.</p>
-      <h1>I am from New York City.</h1>
-      <p>Details here...</p>
+      <h1>Where are you from?</h1>
+      <p>I am from New York.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Chess, swimming and traveling.</p>
       <h1>What's your dream job?</h1>
